objects/Potential_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Client_Plan_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Plan Strategy</label>
        <referenceTo>Client_Plan_Strategy__c</referenceTo>
        <relationshipName>Unqualified_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipName>Unqualified_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date (Expected Revenue Flow Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Unqualified_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Level_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Potential Opportunities</relationshipLabel>
        <relationshipName>Potential_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 2</label>
        <referenceTo>Product_Level_2__c</referenceTo>
        <relationshipLabel>Potential Opportunities</relationshipLabel>
        <relationshipName>Potential_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 3</label>
        <referenceTo>Product_Level_3__c</referenceTo>
        <relationshipLabel>Potential Opportunities</relationshipLabel>
        <relationshipName>Potential_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Opportunity Identified</fullName>
                    <default>true</default>
                    <label>Potential Opportunity Identified</label>
                </value>
                <value>
                    <fullName>Potential Opportunity Engaged</fullName>
                </value>
                <value>
                    <fullName>Potential Opportunity Convert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross Sell</fullName>
                </value>
                <value>
                    <fullName>New to Bank</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Potential Opportunity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Name_Not_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>IF (ISBLANK(Name), true, false)</errorConditionFormula>
        <errorMessage>Name is required</errorMessage>
    </validationRules>
</CustomObject>